# brave-links-opener

./: LICENSE  README.md  open_brave_tabs.py  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
examples/: links.txt
tests/: test_open_brave_tabs.py
